chore(release): final full project version

--- a/chatbot_new/locales/es/translation.json
+++ b/chatbot_new/locales/es/translation.json
@@ -1,18 +1,30 @@
 {
-  "welcome": "👋 ¿Eres usuario registrado o deseas registrarte?",
+  "welcome": "Hola, bienvenido al chatBot de la USC. Me llamo Baot y te ayudaré a matricular asignaturas y ver tus horarios.\nPuedes escoger la opción en inglés o español escribiendo: `lang es` || `lang en`\nEscoge una opción:\n1) Soy estudiante\n2) Soy administrador",
+  "bot_intro_line1": "Hola, bienvenido al chatBot de la USC. Me llamo Baot y te voy a ayudar a matricular asignaturas y ver tus horarios.",
+  "bot_intro_line2": "Puedes escoger la opción en inglés o español escribiendo: lang es || lang en",
+  "bot_choose_option": "Escoge una opción:",
+  "bot_option_student": "Soy estudiante",
+  "bot_option_admin": "Soy administrador",
+  "bot_language_instruction": "Escribe '1' para estudiante o '2' para administrador.",
+  "bot_student_welcome": "Has elegido Estudiante. ¿Estás registrado o deseas registrarte?",
+  "bot_admin_secret_prompt": "Por favor ingresa la clave secreta de administrador para continuar:",
+  "bot_admin_verified": "Clave verificada. ¿Estás registrado o deseas registrarte?",
+  "bot_admin_secret_invalid": "Clave inválida. No es posible continuar como administrador.",
+  "bot_admin_must_verify": "Para acceder como administrador debes primero validar la clave secreta.",
+  "bot_not_admin_account": "La cuenta indicada no tiene rol de administrador.",
   "opt_registered": "registrado",
   "opt_register": "registrarme",
   "ask_name": "👋 Bienvenido. ¿Cuál es tu nombre completo?",
   "ask_email": "📧 Ingresa tu correo registrado:",
   "ask_id": "🪪 Ahora ingresa tu cédula:",
   "session_started": "✅ Sesión iniciada. Escribe \"ayuda\".",
-  "already_exist": "🔐 Ya existías. Escribe \"ayuda\".",
+  "already_exist": "🔐 El correo ya existe. Sesión iniciada.",
   "register_success_admin": "✅ Registro completo. Eres admin.",
   "register_success_student": "✅ Registro completo. Eres estudiante. Escribe \"ayuda\".",
   "register_fail": "❌ Error al registrar. Cédula o correo duplicado.",
   "opt_help": "ayuda",
-  "help_admin": "🛠 Admins:\n- crear materia Nombre:… Codigo:… Semestre:… Créditos:… Cupos:… Dias:… Horas:…\n- crear carrera Nombre:… Codigo:…\n- ver estudiantes\n- ver carreras",
-  "help_student": "📚 Estudiantes:\n- mis datos\n- ver materias\n- inscribirme a CODIGO\n- retirar CODIGO",
+  "help_admin": "🛠 Admins:\n- crear materia Nombre:… Código:… Semestre:… Créditos:… Cupos:… Días:… Horas:…\n- crear carrera Nombre:… Código:…\n- ver estudiantes\n- ver carreras",
+  "help_student": "📚 Estudiantes:\n- mis datos\n- ver materias\n- inscribirme a CODIGO\n- retirar CODIGO \n inscribir carrera CODIGO",
   "unrecognized": "❌ Comando no reconocido. Escribe \"ayuda\".",
   "lang_switched": "✅ Idioma cambiado a {{lng}}.",
   "cmd_create_subject": "crear materia",
@@ -21,8 +33,9 @@
   "cmd_view_subjects": "ver materias",
   "cmd_enroll": "inscribirme a ",
   "cmd_withdraw": "retirar ",
-  "error_format_subject": "❗Formato incorrecto. Usa:\n\ncrear materia Nombre: … Codigo: … Semestre: … Creditos: … Cupos: … Dias: … Horas: …",
-  "error_format_career": "❗Formato incorrecto. Usa:\n\ncrear carrera Nombre: … Codigo: …",
+  "cmd_pensum": "pensum",
+  "error_format_subject": "❗Formato incorrecto. Usa:\n\ncrear materias Nombre: … Código: … Semestre: … Créditos: … Cupos: … Días: … Horas: …",
+  "error_format_career": "❗Formato incorrecto. Usa:\n\ncrear carrera Nombre: … Código: …",
   "subject_created": "✅ Asignatura \"{{nombre}}\" creada.",
   "career_created": "✅ Carrera \"{{nombre}}\" creada.",
   "error_subject_duplicate": "❌ Error al crear materia. Código duplicado.",
@@ -35,11 +48,37 @@
   "not_enrolled": "⚠ No estás inscrito en esa materia.",
   "withdraw_success": "🗑 Has retirado la materia \"{{nombre}}\".",
   "withdraw_error": "❌ Error al retirar la materia.",
-  "field_name": "nombre",
-  "field_code": "codigo",
-  "field_semester": "semestre",
-  "field_credits": "creditos",
-  "field_seats": "cupos",
-  "field_days": "dias",
-  "field_hours": "horas"
+  "field_name": "Nombre",
+  "field_code": "Código",
+  "field_semester": "Semestre",
+  "field_credits": "Créditos",
+  "field_seats": "Cupos",
+  "field_days": "Días",
+  "field_hours": "Horas",
+  "error_career_not_found": "No se encontró la carrera solicitada.",
+  "error_no_career_assigned": "No estás inscrito en ninguna carrera.",
+  "no_subjects_for_career": "No hay asignaturas para la carrera solicitada.",
+  "pensum_ready": "Pensum generado correctamente.",
+  "pensum_error": "Error generando el pensum.",
+  "table_code": "Código",
+  "table_subject": "Asignatura",
+  "table_level": "Nivel",
+  "table_credits": "Créditos",
+  "table_hours": "Horas",
+  "label_student": "Estudiante",
+  "label_career": "Carrera",
+  "total_credits": "Total créditos",
+  "footer_address": "Calle 5 Carrera 62 - Campus Pampalinda - Santiago de Cali - Colombia",
+  "director_name": "Yaneth Vargas Rueda",
+  "director_title": "Directora Admisiones y Registro y Control Académico",
+  "pensum_title": "PENSUM / CURRÍCULUM",
+  "university_name": "UNIVERSIDAD SANTIAGO DE CALI",
+  "cmd_view_students": "ver estudiantes",
+  "admin_view_students_title": "📋 Lista de Estudiantes",
+  "admin_view_students_empty": "❌ No hay estudiantes registrados en el sistema.",
+  "admin_view_students_item": "👤 *Nombre:* {name}\n📧 *Correo:* {email}\n🆔 *Cédula:* {idNumber}\n🎓 *Carrera:* {career}\n",
+  "career_already_enrolled": "⚠ Ya estás inscrito en una carrera.",
+  "career_enrolled_success": "✅ Te has inscrito correctamente en la carrera: {{careerName}}.",
+  "my_data_career": "Carrera",
+  "error_general": "❌ Ocurrió un error. Intenta nuevamente más tarde."
 }
